-------------------
zenTrack is a highly configurable tracking system based 
on a flexible and high quality code base designed for small 
to medium-large businesses.
 
It features a simple interface, fully adaptable administration
and user experience, internationalization, platform and database 
abstraction, and endless possibilities for project expansion. 
--------------------

----- VERSION 2.6.3 (2007-11-28) -----

2008-03-15, cfalonso
  Fixed company name displayed as "Array" in Contacts search box
    - zentrack_2/includes/ZenSearchBoxContact.php 1.5

2008-03-01, cfalonso
  Fixing problem related to file data groups used as default for custom_menu, and keeping custom_menu selections with special characters. Also other contacts stuff.
    - zentrack_2/includes/ZenFieldMap.class 1.54
    - zentrack_2/includes/ZenSearchBoxContact.php 1.4
    - zentrack_2/includes/headerInc.php 1.84
    - zentrack_2/includes/zenTemplate.class 1.18
    - zentrack_2/includes/zenTrack.class 1.232
    - zentrack_2/includes/templates/fields/searchbox.template 1.4

2008-02-22, cfalonso
  Fixed a bug related to the "View Tickets" button (when company selected)
    - zentrack_2/www/contact.php 1.6
  In function getTicketsByCompany fix a query that won't work if the employees table is empty
    - zentrack_2/includes/zenTrack.class 1.231

2008-02-16, cfalonso
  Minor translation fixes
    - zentrack_2/includes/translations/spanish.trans 1.15
  Improved Searchbox info for contacts and changed field separator in searchbox table
    - zentrack_2/includes/ZenSearchBox.php 1.6
    - zentrack_2/includes/ZenSearchBoxContact.php 1.3
    - zentrack_2/includes/headerInc.php 1.83
  Improve contact's info in searchbox
    - zentrack_2/includes/headerInc.php 1.82

2007-12-17, cfalonso
  Fixed problem of duplicate transactions in IE6 & IE7
    - zentrack_2/includes/headerInc.php 1.81
  Fixed problem of loosing custom_menu fields in IE6 & IE7